# rustatlas

./: .gitignore  Cargo.toml  README.md  clippy.logç  coverage.xml  generated_prompt.md  test.ipynb  test_results.html
.github/workflows/: rust.yml
benches/: fixedratepricing.rs
benches/common/: common.rs
examples/: ad_time_sensitivity.rs  fixedratepricing.rs  floatingratepricing.rs  simulation.rs
examples/common/: common.rs  mod.rs
src/: lib.rs  main.rs  prelude.rs
src/alm/: cashaccount.rs  enums.rs  loangenerator.rs  mod.rs  npvengine.rs  positiongenerator.rs  rollover.rs  rolloversimulationengine.rs  traits.rs
src/cashflows/: cashflow.rs  coupon.rs  enums.rs  fixedratecoupon.rs  floatingratecoupon.rs  mod.rs  simplecashflow.rs  traits.rs
src/core/: enums.rs  marketstore.rs  meta.rs  mod.rs  registry.rs  traits.rs
src/currencies/: enums.rs  exchangeratemanager.rs  exchangeratestore.rs  mod.rs  structs.rs  traits.rs
src/instruments/: cashflowstream.rs  doublerateinstrument.rs  fixedrateinstrument.rs  fixfloatswap.rs  floatingrateinstrument.rs  hybridrateinstrument.rs  instrument.rs  instruments.rs  leg.rs  loandepo.rs  makedoublerateinstrument.rs  makefixedrateinstrument.rs  makefixedrateleg.rs  makefixedrateloan.rs  makefixfloatswap.rs  makefloatingrateinstrument.rs  makefloatingrateleg.rs  makefloatingrateloan.rs  makehybridrateinstrument.rs  makemixedrateinstrument.rs  makeswap.rs  makeswapinstrument.rs  mixedrateinstrument.rs  mod.rs  swap.rs  traits.rs
src/math/: interpolator.rs  mod.rs
src/models/: mod.rs  montecarloengine.rs  simplemodel.rs  stochasticprocess.rs  traits.rs
src/rates/: enums.rs  indexstore.rs  interestrate.rs  mod.rs  traits.rs  yieldproviderstore.rs  yieldtermstructuremanager.rs
src/time/: calendar.rs  date.rs  daycounter.rs  enums.rs  imm.rs  mod.rs  period.rs  schedule.rs
src/utils/: errors.rs  mod.rs  num.rs  tools.rs
src/visitors/: accruedamountconstvisitor.rs  aggregationvisitor.rs  fixingvisitor.rs  (+13 more)
(+56 files in other folders)
