[package]
name = "rustatlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
rayon = "1.7.0"
rand = "0.8.0"
thiserror = "1.0"
serde = "1.0.136"
argmin = { git = "https://github.com/argmin-rs/argmin" }
argmin-math = { git = "https://github.com/argmin-rs/argmin", features = ["ndarray_latest-serde", "nalgebra_latest-serde"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "fixedratepricing"
harness = false

[[example]]
name = "fixedratepricing"

[[example]]
name = "floatingratepricing"

