[package]
name = "rustatlas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
rayon = "1.7.0"
rand = "0.8.0"
thiserror = "1.0"
argmin = { version = "0.8.1" }
indicatif = "0.17.7"
serde = "1.0.136"
serde_json = "1.0.68"
num-traits = "0.2.19"

[features]
default = ["aad"]
f64 = []
aad = []

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "fixedratepricing"
harness = false

[[example]]
name = "fixedratepricing"

[[example]]
name = "floatingratepricing"

